# rusty-wasm-playground

./: .env.example  .gitignore  CLAUDE_CONTEXT.md  CONTEXT.md  Cargo.toml  MODULAR_GUIDE.md  README.md  examples.config.js  index.html  main.js  package-lock.json  package.json  sycamore.html  vite.config.js
server/: Cargo.toml  Makefile.toml  README.md
server/src/: main.rs
server/static/: index.html  test-post.html
src/: compute.wgsl  lib.rs  sycamore_app.rs  triangle.wgsl
src/examples/: basic.rs  gpu.rs  math.rs  mod.rs  random.rs
