[package]
name = "rusty-wasm-playground"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["basic", "random", "math", "sycamore"]
basic = []
random = ["dep:rand", "dep:getrandom", "dep:serde", "dep:serde-wasm-bindgen"]
math = ["dep:nalgebra"]
gpu = ["dep:wgpu", "dep:wasm-bindgen-futures", "dep:futures-channel", "dep:bytemuck"]
sycamore = ["dep:sycamore"]

[dependencies]
# Core dependencies (always included)
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

# Optional feature-based dependencies
sycamore = { version = "0.8", optional = true }
rand = { version = "0.8", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
nalgebra = { version = "0.33", default-features = false, features = ["std"], optional = true }
wgpu = { version = "0.19", features = ["wgsl", "webgpu", "webgl"], optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
futures-channel = { version = "0.3", optional = true }
bytemuck = { version = "1.12", features = ["derive"], optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Window",
  "CssStyleDeclaration",
  "KeyboardEvent",
  "MouseEvent",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "WebGl2RenderingContext",
  "WebGlRenderingContext",
  "OffscreenCanvas",
  "Gpu",
  "GpuAdapter",
  "GpuDevice",
  "Performance",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlShader",
]
