[package]
name = "tresor_actix_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.0", features = ["rustls"] }
actix-files = "0.6"
rustls = "0.20"
rustls-pemfile = "1.0"
surrealdb = { version = "1.0.0", features = ["kv-mem"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"